--- a/Form1.resx
+++ b/Form1.resx
@@ -1329,4 +1329,28 @@
         5C7j60hHSBYAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAAMQOAADEDgAAAAAAAAAA
+        AABmT0f/Zk9H/2ZPR/9mT0f/Zk9H/2ZPR/9mT0f/aV/+/2lf/v9mT0f/Zk9H/2ZPR/9mT0f/Zk9H/2ZP
+        R/9mT0f/Zk9H/2ZPR/9mT0f/Zk9H/2ZPR/9mT0f/493b/2lf/v9pX/7/8+/u/2ZPR/9mT0f/Zk9H/2ZP
+        R/9mT0f/Zk9H/2ZPR/9mT0f/Zk9H/2ZPR/9mT0f/Zk9H//Pv7v/NyPL/aV/+//Pv7v9mT0f/Zk9H/2ZP
+        R/9mT0f/Zk9H/2ZPR/9mT0f/Zk9H/2ZPR/9mT0f/Zk9H/8rBvv/z7+7/tK31/2lf/v/z7+7/8+/u/2ZP
+        R/9mT0f/Zk9H/2ZPR/9mT0f/AAAAAGZPR/9mT0f/Zk9H/2ZPR//z7+7/39TS/9/U0v/f1NL/39TS//Pv
+        7v9mT0f/Zk9H/2ZPR/9mT0f/AAAAAAAAAAAAAAAAAAAAAHNeVsexpJ//39TS/9/U0v+w3fT/dtL//9/U
+        0v/f1NL/8+/u/5yNh/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACd3///vun//77p
+        //920v//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvun//77p
+        //++6f//vun//73o/00AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvun//77p
+        //++6f//vun//77p//++6f//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv+n/ur7p
+        //++6f//vun//77p//++6f//vun//77p//8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAL7p
+        /9S+6f//vun//77p//++6f//vun//77p//9xYl7/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABmT0f/vun//77p//++6f//vun//77p//++6f//Zk9H/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAZk9H/2ZPR/9mT0f/Zk9H/2ZPR/9mT0f/Zk9H/2ZPR/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABmT0f/Zk9H/2ZPR/9mT0f/Zk9H/2ZPR/9mT0f/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAZk9H/2ZPR/9mT0f/Zk9H/2ZPR/9mT0f/AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABmT0f/Zk9H/2ZPR/9mTkiAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAIABAADwBwAA/D8AAPw/AAD4HwAA+A8AAPgPAADwDwAA8A8AAPgP
+        AAD4HwAA/H8AAA==
+</value>
+  </data>
 </root>
